adjust and test getFollowers and getFollowing